--- a/top/indexcrm.html
+++ b/top/indexcrm.html
@@ -52,7 +52,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 </ul>
 </div>
 
-<div id="tabCot_product_1" class="tabCot" style="padding:2px 0 0 0">
+<div id="tabCot_product_1" class="tabCot" style="padding:2px 0 0 0; display:none">
     <div id="mytaobao-panel" class="grid-c2">
         <div class="col-sub">
             <div id="mytaobao-menu" class="box-diamond">
@@ -285,7 +285,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 
 
-<div id="tabCot_product_1" class="tabCot" style="padding:2px 0 0 0">
+<div id="tabCot_product_5" class="tabCot" style="padding:2px 0 0 0">
     <div id="mytaobao-panel" class="grid-c2">
         <div class="col-sub">
             <div id="mytaobao-menu" class="box-diamond">
@@ -302,9 +302,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="crm/customlist.aspx" target="mainframe">客户列表</a></span></li>
+		href="crm/customlist.aspx" target="mainframe5">客户列表</a></span></li>
 		<li><span> <a
-		href="crm/initcustom.aspx" target="mainframe">导入历史数据</a></span></li>
+		href="crm/initcustom.aspx" target="mainframe5">导入历史数据</a></span></li>
     </ul>
 </div>
 
@@ -315,11 +315,11 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="crm/customlist.aspx?count=1" target="mainframe">购买过一次的会员</a></span></li>
+		href="crm/customlist.aspx?count=1" target="mainframe5">购买过一次的会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=2" target="mainframe">购买过多次的会员</a></span></li>
+		href="crm/customlist.aspx?count=2" target="mainframe5">购买过多次的会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=0" target="mainframe">未成功购买的会员</a></span></li>
+		href="crm/customlist.aspx?count=0" target="mainframe5">未成功购买的会员</a></span></li>
     </ul>
 </div>
 
@@ -329,15 +329,15 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="crm/customlist.aspx?count=a" target="mainframe">未购买</a></span></li>
+		href="crm/customlist.aspx?count=a" target="mainframe5">未购买</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=b" target="mainframe">普通会员</a></span></li>
+		href="crm/customlist.aspx?count=b" target="mainframe5">普通会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=c" target="mainframe">高级会员</a></span></li>
+		href="crm/customlist.aspx?count=c" target="mainframe5">高级会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=d" target="mainframe">VIP会员</a></span></li>
+		href="crm/customlist.aspx?count=d" target="mainframe5">VIP会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=e" target="mainframe">至尊VIP会员</a></span></li>
+		href="crm/customlist.aspx?count=e" target="mainframe5">至尊VIP会员</a></span></li>
     </ul>
 </div>
 
@@ -346,17 +346,14 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-		<li><span> <a href="crm/couponlist.aspx" target="mainframe">优惠券管理</a></span></li>		
-		<li><span> <a href="crm/couponsend.aspx" target="mainframe">优惠券赠送记录</a></span></li>		
-		<li><span> <a href="crm/msgsend.aspx" target="mainframe">手动赠送</a></span></li>		
+		<li><span> <a href="crm/couponlist.aspx" target="mainframe5">优惠券管理</a></span></li>		
+		<li><span> <a href="crm/couponsend.aspx" target="mainframe5">优惠券赠送记录</a></span></li>		
+		<li><span> <a href="crm/msgsend.aspx" target="mainframe5">手动赠送</a></span></li>		
     </ul>
 </div>
 
 
-
-
-
-
+</div>
 <!--content-->
             </div>
         </div>
@@ -364,7 +361,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
         <div style="width:780px; margin-left:10px; float:left; height:1220px;">
                 <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" 
 
-name="mainframe" src="crm/customlist.aspx" frameborder="0" scrolling="no"></iframe>
+name="mainframe5" src="crm/customlist.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
