--- a/top/indexcrm.html
+++ b/top/indexcrm.html
@@ -18,7 +18,7 @@
 	    <p class="login-info">
             <script language="javascript" type="text/javascript" 
 
-src="js_userinfo.aspx"></script> 
+src="http://www.7fshop.com/top/js_userinfo.aspx"></script> 
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
 E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
