--- a/top/index.html
+++ b/top/index.html
@@ -300,9 +300,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="crm/customlist.aspx" target="mainframe5">客户列表</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">客户列表</a></span></li>
 		<li><span> <a
-		href="crm/initcustom.aspx" target="mainframe5">导入历史数据</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/initcustom.aspx" target="mainframe5">导入历史数据</a></span></li>
     </ul>
 </div>
 
@@ -313,11 +313,11 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="crm/customlist.aspx?count=1" target="mainframe5">购买过一次的会员</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=1" target="mainframe5">购买过一次的会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=2" target="mainframe5">购买过多次的会员</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=2" target="mainframe5">购买过多次的会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=0" target="mainframe5">未成功购买的会员</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=0" target="mainframe5">未成功购买的会员</a></span></li>
     </ul>
 </div>
 
@@ -327,15 +327,15 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="crm/customlist.aspx?count=a" target="mainframe5">未购买</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=a" target="mainframe5">未购买</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=b" target="mainframe5">普通会员</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=b" target="mainframe5">普通会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=c" target="mainframe5">高级会员</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=c" target="mainframe5">高级会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=d" target="mainframe5">VIP会员</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=d" target="mainframe5">VIP会员</a></span></li>
 		<li><span> <a
-		href="crm/customlist.aspx?count=e" target="mainframe5">至尊VIP会员</a></span></li>
+		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=e" target="mainframe5">至尊VIP会员</a></span></li>
     </ul>
 </div>
 
@@ -344,9 +344,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-		<li><span> <a href="crm/couponlist.aspx" target="mainframe5">优惠券管理</a></span></li>		
-		<li><span> <a href="crm/couponsend.aspx" target="mainframe5">优惠券赠送记录</a></span></li>		
-		<li><span> <a href="crm/msgsend.aspx" target="mainframe5">手动赠送</a></span></li>		
+		<li><span> <a href="http://haoping.7fshop.com/top/crm/couponlist.aspx" target="mainframe5">优惠券管理</a></span></li>		
+		<li><span> <a href="http://haoping.7fshop.com/top/crm/couponsend.aspx" target="mainframe5">优惠券赠送记录</a></span></li>		
+		<li><span> <a href="http://haoping.7fshop.com/top/crm/msgsend.aspx" target="mainframe5">手动赠送</a></span></li>		
     </ul>
 </div>
 
@@ -359,7 +359,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
         <div style="width:780px; margin-left:10px; float:left; height:1220px;">
                 <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" 
 
-name="mainframe5" src="crm/customlist.aspx" frameborder="0" scrolling="no"></iframe>
+name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
