--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -285,9 +285,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 
 <div id="tabCot_product_5" class="tabCot" style="padding:2px 0 0 0; display:none">
-    <div id="Div1" class="grid-c2">
+    <div id="mytaobao-panel" class="grid-c2">
         <div class="col-sub">
-            <div id="Div2" class="box-diamond">
+            <div id="mytaobao-menu" class="box-diamond">
 <!--content-->
 
 <div class="mytaobao-bd">
