--- a/top/index.html
+++ b/top/index.html
@@ -47,7 +47,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
    <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
    <li><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
    <li><a href="javascript:void(0)" title="移动客户端" rel="4">移动客户端</a></li>
-   <li><a href="javascript:void(0)" title="客户关系营销" rel="5">客户关系营销</a></li>
+   <li><a href="javascript:void(0)" title="客户关系营销" rel="5">客户营销</a></li>
+   <li><a href="javascript:void(0)" title="销售分析" rel="6">销售分析</a></li>
    <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
 </ul>
 </div>
@@ -355,7 +356,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <!--content-->
             </div>
         </div>
-        
+
         <div style="width:780px; margin-left:10px; float:left; height:1220px;">
                 <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" 
 
@@ -365,9 +366,49 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 </div>
 
 
+<!--area6-->
+<div id="tabCot_product_6" class="tabCot" style="padding:2px 0 0 0; display:none">
+    <div id="mytaobao-panel" class="grid-c2">
+        <div class="col-sub">
+            <div id="mytaobao-menu" class="box-diamond">
+<!--content-->
+
+<div class="mytaobao-bd">
 
 
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 销售分析 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="http://ding.7fshop.com/CreateCode.aspx" target="mainframe6">获取统计代码</a></span></li>
+		<li><span> <a
+		href="http://ding.7fshop.com/HourTotal.aspx" target="mainframe6">店铺统计分析</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/BackTotal.aspx" target="mainframe6">二次销售分析</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/GoodsBuyTotal.aspx" target="mainframe6">爆款宝贝排行</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/OrderTotal.aspx" target="mainframe6">销售量分析</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/PageVisitTotal.aspx" target="mainframe6">页面访问分析</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/TopGoods.aspx" target="mainframe6">宝贝浏览分析</a></span></li>	
+    </ul>
+</div>
 
+</div>
+<!--content-->
+            </div>
+        </div>
+        
+        <div style="width:780px; margin-left:10px; float:left; height:1220px;">
+                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe6" src="http://ding.7fshop.com/default.aspx" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+</div>
+<!--area6end-->
 
 </div>
 
