--- a/top/index.html
+++ b/top/index.html
@@ -42,7 +42,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <div style="float:left; width:161px;">
     <img alt="特特营销推广专家" src="images/logo.jpg" width="150" height="40" />
 </div>
-<ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:10px;">
+<ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:700px; margin-top:10px;">
    <li class="currentBtn"><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
    <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
    <li><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
@@ -382,15 +382,15 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 </h3>
 <ul class="group">
 		<li><span> <a
+		href="http://ding.7fshop.com/default.aspx" target="mainframe6">店铺统计总览</a></span></li>	
+		<li><span> <a
 		href="http://ding.7fshop.com/CreateCode.aspx" target="mainframe6">获取统计代码</a></span></li>
 		<li><span> <a
-		href="http://ding.7fshop.com/HourTotal.aspx" target="mainframe6">店铺统计分析</a></span></li>	
+		href="http://ding.7fshop.com/HourTotal.aspx" target="mainframe6">店铺浏览统计</a></span></li>	
 		<li><span> <a
 		href="http://ding.7fshop.com/BackTotal.aspx" target="mainframe6">二次销售分析</a></span></li>	
 		<li><span> <a
 		href="http://ding.7fshop.com/GoodsBuyTotal.aspx" target="mainframe6">爆款宝贝排行</a></span></li>	
-		<li><span> <a
-		href="http://ding.7fshop.com/OrderTotal.aspx" target="mainframe6">销售量分析</a></span></li>	
 		<li><span> <a
 		href="http://ding.7fshop.com/PageVisitTotal.aspx" target="mainframe6">页面访问分析</a></span></li>	
 		<li><span> <a
