--- a/top/index.html
+++ b/top/index.html
@@ -47,8 +47,12 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
    <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
    <li><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
    <li><a href="javascript:void(0)" title="移动客户端" rel="4">移动客户端</a></li>
-   <li><a href="javascript:void(0)" title="客户关系营销" rel="5">客户营销</a></li>
-   <li><a href="javascript:void(0)" title="销售分析" rel="6">销售分析</a></li>
+   <li style='height:25px;'><a href="javascript:void(0)" title="客户关系营销" rel="5">客户营销</a>
+   <img src='images/new.gif' style="position:relative; left:58px; top:-38px;" />
+   </li>
+   <li style='height:25px;'><a href="javascript:void(0)" title="销售分析" rel="6">销售分析</a>
+    <img src='images/new.gif' style="position:relative; left:58px; top:-38px;" />
+    </li>
    <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
 </ul>
 </div>
