--- a/top/index.html
+++ b/top/index.html
@@ -399,6 +399,8 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 		href="http://ding.7fshop.com/PageVisitTotal.aspx" target="mainframe6">页面访问分析</a></span></li>	
 		<li><span> <a
 		href="http://ding.7fshop.com/TopGoods.aspx" target="mainframe6">宝贝浏览分析</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/PingjiaTotal.aspx" target="mainframe6">评价分析</a></span></li>	
     </ul>
 </div>
 
