--- a/top/index.html
+++ b/top/index.html
@@ -390,7 +390,9 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 		<li><span> <a
 		href="http://ding.7fshop.com/CreateCode.aspx" target="mainframe6">获取统计代码</a></span></li>
 		<li><span> <a
-		href="http://ding.7fshop.com/HourTotal.aspx" target="mainframe6">店铺浏览统计</a></span></li>	
+		href="http://ding.7fshop.com/HourTotal.aspx" target="mainframe6">浏览统计(小时)</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/VisitTotal.aspx" target="mainframe6">浏览统计(天)</a></span></li>	
 		<li><span> <a
 		href="http://ding.7fshop.com/BackTotal.aspx" target="mainframe6">二次销售分析</a></span></li>	
 		<li><span> <a
@@ -401,6 +403,8 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 		href="http://ding.7fshop.com/TopGoods.aspx" target="mainframe6">宝贝浏览分析</a></span></li>	
 		<li><span> <a
 		href="http://ding.7fshop.com/PingjiaTotal.aspx" target="mainframe6">评价分析</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/OrderTotal.aspx" target="mainframe6">订单销售统计</a></span></li>	
     </ul>
 </div>
 
