--- a/top/index.html
+++ b/top/index.html
@@ -405,6 +405,8 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 		href="http://ding.7fshop.com/PingjiaTotal.aspx" target="mainframe6">评价分析</a></span></li>	
 		<li><span> <a
 		href="http://ding.7fshop.com/OrderTotal.aspx" target="mainframe6">订单销售统计</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/SellCityTop.aspx" target="mainframe6">销售城市排行</a></span></li>	
     </ul>
 </div>
 
