--- a/top/index.html
+++ b/top/index.html
@@ -43,14 +43,14 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
     <img alt="特特营销推广专家" src="images/logo.jpg" width="150" height="40" />
 </div>
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:700px; margin-top:10px;">
-   <li class="currentBtn"><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
-   <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
-   <li><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
-   <li><a href="javascript:void(0)" title="移动客户端" rel="4">移动客户端</a></li>
-   <li style='height:25px;'><a href="javascript:void(0)" title="客户关系营销" rel="5">客户营销</a>
+   <li id="tab1"><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
+   <li id="tab2"><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
+   <li id="tab3"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
+   <li id="tab4"><a href="javascript:void(0)" title="移动客户端" rel="4">移动客户端</a></li>
+   <li id="tab5" style='height:25px;'><a href="javascript:void(0)" title="客户关系营销" rel="5">客户营销</a>
    <img src='images/new.gif' style="position:relative; left:58px; top:-38px;" />
    </li>
-   <li style='height:25px;'><a href="javascript:void(0)" title="销售分析" rel="6">销售分析</a>
+   <li id="tab6" style='height:25px;'><a href="javascript:void(0)" title="销售分析" rel="6">销售分析</a>
     <img src='images/new.gif' style="position:relative; left:58px; top:-38px;" />
     </li>
    <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
@@ -555,6 +555,17 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
     }
 
     setTimeout('showArea()', 3000);
+
+    selectTab();
+
+    function selectTab() {
+        var url = document.URL;
+        if (url.indexOf("t=1") != -1) {
+            document.getElementById("tab3").className = "currentBtn";
+        } else {
+            document.getElementById("tab1").className = "currentBtn";
+        }
+    }
 </script>
 
 </body>
