--- a/top/index.html
+++ b/top/index.html
@@ -416,7 +416,7 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
         </div>
         
         <div style="width:780px; margin-left:10px; float:left; height:1220px;">
-                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe6" src="http://ding.7fshop.com/default.aspx" frameborder="0" scrolling="no"></iframe>
+                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe6" src="http://ding.7fshop.com/tijian/index.html" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
