--- a/top/index.html
+++ b/top/index.html
@@ -595,7 +595,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 </div>
 
 <div id="ggArea1" style="display:none; position: absolute; display:none; top: 220px; left: 400px;  z-index: 10003; background-color:white; padding:5px">
-    <a href='javascript:closeArea();' style="font-size:16px; font-weight:bold; color:black">关闭窗口</a> 20秒后窗口自动关闭.. <br>
+    <a href='javascript:closeArea1();' style="font-size:16px; font-weight:bold; color:black">关闭窗口</a> 20秒后窗口自动关闭.. <br>
 <span style="font-size:18px; font-weight:bold; color:red;">新年送大礼，手机客户端最低只要9元<br>让您的网店直入驻买家手机</span><br>
 <a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-7:1' target='_blank'><img src='images/gg1.jpg' border=0></a>
 <a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-6:1' target='_blank'><img src='images/gg2.jpg' border=0></a><br>
