--- a/top/index.html
+++ b/top/index.html
@@ -482,7 +482,7 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
         document.getElementById("ggArea1").style.display = "none";
     }
 
-    if ((10*Math.random()) % 2 == 0) {
+    if (parseInt(10 * Math.random()) % 2 == 0) {
         setTimeout('showArea()', 3000);
     } else {
         setTimeout('showArea1()', 3000);
