--- a/top/index.html
+++ b/top/index.html
@@ -481,7 +481,7 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
         document.getElementById("divBackground").style.display = "none";
         document.getElementById("ggArea1").style.display = "none";
     }
-
+    document.write(parseInt(10 * Math.random()));
     if (parseInt(10 * Math.random()) % 2 == 0) {
         setTimeout('showArea()', 3000);
     } else {
