--- a/top/index.html
+++ b/top/index.html
@@ -516,8 +516,8 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
         document.getElementById("tab3").className = "";
         document.getElementById("tab6").className = "currentBtn";
 
-        document.getElementById("mainframe6id").src = "http://ding.7fshop.com/tongji/index.html";
-        closeArea1();
+        document.getElementById("mainframe6id").src = "http://ding.7fshop.com/tijian/index.html";
+        closeArea();
     }
 </script>
 
