--- a/top/index.html
+++ b/top/index.html
@@ -390,25 +390,48 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 		<li><span> <a
 		href="http://ding.7fshop.com/CreateCode.aspx" target="mainframe6">获取统计代码</a></span></li>
 		<li><span> <a
-		href="http://ding.7fshop.com/HourTotal.aspx" target="mainframe6">浏览统计(小时)</a></span></li>	
-		<li><span> <a
-		href="http://ding.7fshop.com/VisitTotal.aspx" target="mainframe6">浏览统计(天)</a></span></li>	
-		<li><span> <a
 		href="http://ding.7fshop.com/BackTotal.aspx" target="mainframe6">二次销售分析</a></span></li>	
 		<li><span> <a
 		href="http://ding.7fshop.com/GoodsBuyTotal.aspx" target="mainframe6">爆款宝贝排行</a></span></li>	
 		<li><span> <a
-		href="http://ding.7fshop.com/PageVisitTotal.aspx" target="mainframe6">页面访问分析</a></span></li>	
+		href="http://ding.7fshop.com/OrderTotal.aspx" target="mainframe6">销售统计(天)</a></span></li>	
 		<li><span> <a
-		href="http://ding.7fshop.com/TopGoods.aspx" target="mainframe6">宝贝浏览分析</a></span></li>	
-		<li><span> <a
-		href="http://ding.7fshop.com/PingjiaTotal.aspx" target="mainframe6">评价分析</a></span></li>	
-		<li><span> <a
-		href="http://ding.7fshop.com/OrderTotal.aspx" target="mainframe6">订单销售统计</a></span></li>	
+		href="http://ding.7fshop.com/HourOrdersTotal.aspx" target="mainframe6">销售统计(小时)</a></span></li>	
 		<li><span> <a
 		href="http://ding.7fshop.com/SellCityTop.aspx" target="mainframe6">销售城市排行</a></span></li>	
     </ul>
 </div>
+
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 浏览统计 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="http://ding.7fshop.com/HourTotal.aspx" target="mainframe6">浏览统计(小时)</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/VisitTotal.aspx" target="mainframe6">浏览统计(天)</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/PageVisitTotal.aspx" target="mainframe6">页面访问分析</a></span></li>	
+		<li><span> <a
+		href="http://ding.7fshop.com/TopGoods.aspx" target="mainframe6">宝贝浏览分析</a></span></li>	
+    </ul>
+</div>
+
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 评价统计 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="http://ding.7fshop.com/PingjiaTotal.aspx" target="mainframe6">评价分析</a></span></li>	
+    </ul>
+</div>
+
 
 </div>
 <!--content-->
