--- a/top/index.html
+++ b/top/index.html
@@ -47,7 +47,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
    <li id="tab2"><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
    <li id="tab3"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
    <li id="tab4"><a href="javascript:void(0)" title="移动客户端" rel="4">移动客户端</a></li>
-   <li id="tab5" style='height:25px;'><a href="javascript:void(0)" title="客户关系营销" rel="5">客户营销</a>
+   <li id="tab5" style='height:25px;'><a href="javascript:void(0)" title="客户关系营销" rel="5">客户关系CRM</a>
    <img src='images/new.gif' style="position:relative; left:58px; top:-38px;" />
    </li>
    <li id="tab6" style='height:25px;'><a href="javascript:void(0)" title="销售分析" rel="6">销售分析</a>
