--- a/top/index.html
+++ b/top/index.html
@@ -236,6 +236,16 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
     </ul>
 </div>
 
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 支付宝红包 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipay.aspx" target="mainframe2">红包管理</a></span></li>		
+	</ul>
+</div>
+
+
 </div>
 <!--content-->
             </div>
@@ -354,7 +364,6 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 		<li><span> <a href="http://haoping.7fshop.com/top/crm/msgsend.aspx" target="mainframe5">手动赠送</a></span></li>		
     </ul>
 </div>
-
 
 </div>
 <!--content-->
