--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -31,11 +31,6 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 <div id="content1">
 
 <div id="tabCot_product" class="tab">
-<div class="tabContainer">
-<div style="float:left; width:161px;">
-    <img alt="二次销售魔方" src="images/logo.jpg" width="150" height="40" />
-</div>
-</div>
 
 <div id="tabCot_product_1" class="tabCot" style="padding:2px 0 0 0;">
     <div id="mytaobao-panel" class="grid-c2">
@@ -65,6 +60,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 <ul class="group">
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">好评列表</a></span></li>	
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/sale/kefulist.aspx" target="mainframe2">评价审核</a></span></li>	
 </ul>
 </div>
 
