--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -79,6 +79,15 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
     </ul>
 </div>
 
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 支付宝红包 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a href="http://haoping.7fshop.com/top/sale/alipay.aspx" target="mainframe2">红包管理</a></span></li>		
+	</ul>
+</div>
+
 </div>
 <!--content-->
             </div>
