--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -50,42 +50,84 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 		href="http://haoping.7fshop.com/top/sale/setting.aspx" target="mainframe2">基本设置</a></span></li>
 		<li><span> <a
 		href="http://haoping.7fshop.com/top/sale/html.aspx" target="mainframe2">活动展示</a></span></li>	
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/sale/msg.aspx" target="mainframe2">短信设置</a></span> | <span> <a
+		href="http://haoping.7fshop.com/top/sale/msglist.aspx" target="mainframe2">发送记录</a></span></li>	
+		<li ></li>		
     </ul>
 </div>
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 商品评价 </span>
+<h3 class="mytaobao-bar"><span> 好评送礼 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">好评列表</a></span></li>	
+		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">评价列表</a></span></li>	
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/sale/kefulist.aspx" target="mainframe2">评价审核</a></span></li>	
-</ul>
-</div>
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/sale/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/sale/couponsend.aspx" target="mainframe2">优惠券赠送记录</a></span></li>		
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/msgsend.aspx" target="mainframe2">手动赠送</a></span></li>		
-    </ul>
+		href="http://haoping.7fshop.com/top/sale/msgsend.aspx" target="mainframe2">手动赠送</a></span></li>	
+</ul>
 </div>
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 支付宝红包 </span>
+<h3 class="mytaobao-bar"><span> 分享有礼 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-		<li><span> <a href="http://haoping.7fshop.com/top/sale/alipay.aspx" target="mainframe2">红包管理</a></span></li>		
-	</ul>
+    
+</ul>
+</div>
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 手机优惠券 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+</ul>
+</div>
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 再买返现 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+</ul>
+</div>
+
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 首购红包 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+</ul>
+</div>
+
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 开箱有礼 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+</ul>
+</div>
+
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 包邮卡 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+</ul>
 </div>
 
 </div>
