--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -51,7 +51,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 		<li><span> <a
 		href="http://haoping.7fshop.com/top/sale/html.aspx" target="mainframe2">活动展示</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/msg.aspx" target="mainframe2">短信设置</a></span> | <span> <a
+		href="http://haoping.7fshop.com/top/sale/msg.aspx" target="mainframe2">短信设置</a> | <a
 		href="http://haoping.7fshop.com/top/sale/msglist.aspx" target="mainframe2">发送记录</a></span></li>	
 		<li ></li>		
     </ul>
@@ -65,13 +65,9 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">评价列表</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/kefulist.aspx" target="mainframe2">评价审核</a></span></li>	
-		<li ><span> <a
 		href="http://haoping.7fshop.com/top/sale/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/sale/couponsend.aspx" target="mainframe2">优惠券赠送记录</a></span></li>		
-		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/msgsend.aspx" target="mainframe2">手动赠送</a></span></li>	
 </ul>
 </div>
 
