--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -51,9 +51,9 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 		<li><span> <a
 		href="http://haoping.7fshop.com/top/sale/html.aspx" target="mainframe2">活动展示</a></span></li>	
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/msg.aspx" target="mainframe2">短信设置</a> | <a
-		href="http://haoping.7fshop.com/top/sale/msglist.aspx" target="mainframe2">发送记录</a></span></li>	
-		<li ></li>		
+		href="http://haoping.7fshop.com/top/sale/msg.aspx" target="mainframe2">短信设置</a></span></li>	
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/sale/msglist.aspx" target="mainframe2">发送记录</a></span></li>		
     </ul>
 </div>
 
