--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -40,34 +40,15 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 
 <div class="mytaobao-bd">
 
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 二次销售魔方 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/sale/setting.aspx" target="mainframe2">基本设置</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/sale/html.aspx" target="mainframe2">活动展示</a></span></li>	
-		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/msg.aspx" target="mainframe2">短信设置</a></span></li>	
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/sale/msglist.aspx" target="mainframe2">发送记录</a></span></li>		
-    </ul>
-</div>
-
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 好评送礼 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">评价列表</a></span></li>	
-		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
-		<li ><span> <a
-		href="http://haoping.7fshop.com/top/sale/couponsend.aspx" target="mainframe2">优惠券赠送记录</a></span></li>		
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">评价列表</a></span></li>		
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/sale/couponsend.aspx" target="mainframe2">赠送记录</a></span></li>		
 </ul>
 </div>
 
@@ -76,36 +57,20 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-    
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">分享设置</a></span></li>
 </ul>
 </div>
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 手机优惠券 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-</ul>
-</div>
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 再买返现 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-</ul>
-</div>
-
-
 
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 首购红包 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
+    <li><span> <a href="http://haoping.7fshop.com/top/sale/alipay.aspx" target="mainframe2">支付宝红包</a></span></li>	
+    <li><span> <a href="http://haoping.7fshop.com/top/sale/alipaydetail.aspx" target="mainframe2">赠送记录</a></span></li>	
 </ul>
 </div>
-
 
 
 <div class="menu-box">
@@ -113,16 +78,22 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
+	<li><span> <a
+	href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">二维码创建</a></span></li>
 </ul>
 </div>
-
-
 
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 包邮卡 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
+	<li><span> <a
+	href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">包邮卡管理</a></span></li>
+	<li><span> <a
+	href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">领取记录</a></span></li>
+	<li><span> <a
+	href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">使用记录</a></span></li>
 </ul>
 </div>
 
