--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
     <title>二次销售魔方</title>
-    <link href="css/css1.css" rel="stylesheet" />
+    <link href="css/css1sale.css" rel="stylesheet" />
     <link href="css/member.css" rel="stylesheet" />
     <link href="market/images/tab.css" rel="stylesheet" />
 </head>
@@ -53,47 +53,12 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 </div>
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 分享有礼 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">分享设置</a></span></li>
-</ul>
-</div>
-
-<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 首购红包 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
     <li><span> <a href="http://haoping.7fshop.com/top/sale/alipay.aspx" target="mainframe2">支付宝红包</a></span></li>	
     <li><span> <a href="http://haoping.7fshop.com/top/sale/alipaydetail.aspx" target="mainframe2">赠送记录</a></span></li>	
-</ul>
-</div>
-
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 开箱有礼 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-	<li><span> <a
-	href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">二维码创建</a></span></li>
-</ul>
-</div>
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 包邮卡 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-	<li><span> <a
-	href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">包邮卡管理</a></span></li>
-	<li><span> <a
-	href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">领取记录</a></span></li>
-	<li><span> <a
-	href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">使用记录</a></span></li>
 </ul>
 </div>
 
