--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -20,6 +20,8 @@
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=叶儿随清风&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
 align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清风&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
+        
+            亲，欢迎光临  <a href='logout.aspx'>退出</a>
         </p>
         <ul class="quick-menu">
             <li>
